green color contrast correction

--- a/css/main.less
+++ b/css/main.less
@@ -1,7 +1,7 @@
 @color_background_light: #f7f7f7;
 @color_background_primary : #0a3d62;
 @color_background_secondary: #F6AD55;
-@color_background_info: #48bb78;
+@color_background_info: #38a169;
 @color_foreground_light: #ffffff;
 @color_foreground_dark: #000000;
 
@@ -136,7 +136,7 @@ p {
 
 .resume {
     .info {
-        background-color: #48bb78;
+        background-color: @color_background_info;
         &:before {
              border-right: 10px solid @color_background_info ;
         }
